# kokkai-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json  init.sh  start.sh
src/: client.py  config.py  duckdb.py  hello.py  model.py  parquet.py  sentence_transformers.py  server.py  storage.py  task.py
src/cmd/: encode-text.py  mcp.py  sync-api.py  upload.py
src/kokkaiapiclient/: api_client.py  kiota-lock.json
src/kokkaiapiclient/api/: api_request_builder.py
src/kokkaiapiclient/models/: error_response.py  image_kind.py  meeting_list_response.py  meeting_list_response_meeting_record.py  meeting_list_response_meeting_record_closing.py  meeting_list_response_meeting_record_closing_member1.py  meeting_list_response_meeting_record_pdf_u_r_l.py  meeting_list_response_meeting_record_pdf_u_r_l_member1.py  meeting_list_response_next_record_position.py  meeting_list_response_next_record_position_member1.py  meeting_list_speech_record.py  meeting_list_speech_record_speaker.py  meeting_response.py  meeting_response_meeting_record.py  meeting_response_meeting_record_closing.py  meeting_response_meeting_record_closing_member1.py  meeting_response_meeting_record_pdf_u_r_l.py  meeting_response_meeting_record_pdf_u_r_l_member1.py  meeting_response_next_record_position.py  meeting_response_next_record_position_member1.py  meeting_speech_record.py  meeting_speech_record_speaker.py  meeting_speech_record_speaker_group.py  meeting_speech_record_speaker_group_member1.py  meeting_speech_record_speaker_position.py  meeting_speech_record_speaker_position_member1.py  meeting_speech_record_speaker_yomi.py  meeting_speech_record_speaker_yomi_member1.py  name_of_house.py  search_range.py  speaker_role.py  speech_record.py  (+14 more)
tests/: test_hello.py  test_parquet.py  test_storage.py  test_tesk.py
(+7 files in other folders)
